Shop UI added(not functional)

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
-<header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 bg-white border-bottom fixed-top shadow-sm">
-    <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">  
-    <nav class="my-2 text-uppercase fs-5">
+<header class="d-flex flex-row align-items-center justify-content-between p-1 px-4 bg-light border-bottom fixed-top shadow-sm">
+    <nav class="my-2 text-uppercase">
+        <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">  
         <a class="p-2 text-dark text-decoration-none" href="#">Ana Sayfa</a>
-        <a class="p-2 mx-3 text-dark text-decoration-none" href="#">Öne Çıkanlar</a>
+        <a class="p-2 text-dark text-decoration-none" href="#">Öne Çıkanlar</a>
         <a class="p-2 text-dark text-decoration-none" href="#">İLETİŞİM</a>
     </nav>
 
