--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -12,7 +12,7 @@
                 <ul class="list-group my-3">
                     <li class="list-group-item"
                     *ngFor="let brand of brands"
-                    [class.active]="brand.id == brandIdSelected"
+                    [class.active]="brand.id == shopParams.brandId"
                     [value]="brand.id"
                     (click)="onBrandSelected(brand.id)">
                     {{brand.name}}
@@ -21,7 +21,7 @@
             <h5 class="text-primary ms-3">Kategoriler</h5>
                 <ul class="list-group my-3">
                     <li class="list-group-item" *ngFor="let type of types"
-                    [class.active]="type.id == typeIdSelected"
+                    [class.active]="type.id == shopParams.typeId"
                     [value]="type.id"
                     (click)="onTypeSelected(type.id)">
                     {{type.name}}
@@ -32,21 +32,31 @@
 
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <header>
-                    <span></span>
-                </header>
+
+                <app-paging-header [totalCount]="totalCount"
+                [pageNumber]="shopParams.pageNumber"
+                [pageSize]="shopParams.pageSize">
+                </app-paging-header>
 
                 <div class="d-flex mt-2">
-                    <input type="text" name="" id=""a class="form-control me-2">
-                    <button class="btn btn-outline-primary mx-2">Ara</button>
-                    <button class="btn btn-outline-success">Sıfırla</button>
+                    <input (keyup.enter)="onSearch()" type="text" placeholder="Anahtar kelime ile arama" id="" class="form-control me-2" #search>
+                    <button (click)="onSearch()"class="btn btn-outline-primary mx-2">Ara</button>
+                    <button (click)="onReset()" class="btn btn-outline-success">Sıfırla</button>
                 </div>
             </div>
 
-            <div class="row row-cols-3 g-3">
+            <div class="row row-cols-3 g-3 mb-2">
                 <div class="col" *ngFor="let product of products">
                     <app-product-item [product]="product"></app-product-item>
                 </div>
+            </div>
+
+            <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
+                <app-pager
+                [totalCount]="totalCount"
+                [pageSize]="shopParams.pageSize"
+                (pageChanged)="onPageChanged($event)">
+                </app-pager>
             </div>
         </section>
     </div>
