Added complete routing Added complete product page UI

--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -15,7 +15,9 @@ a {
     color: #343a40;
 
     &.active {
-        color: orange;
+        background-color: #d9d9d9;
+        border: 1px solid transparent;
+        border-radius: 8px;
     }
 }
 
