--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,19 +1,21 @@
-<header class="d-flex flex-row align-items-center justify-content-between p-1 px-4 bg-light border-bottom fixed-top shadow-sm">
-    <nav class="my-2 text-uppercase">
-        <img class="logo" src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">  
-        <a class="p-2" 
+<header class="d-flex flex-row justify-content-between align-items-center p-1 px-4 bg-light border-bottom fixed-top shadow-sm">
+    <nav class="my-2 text-uppercase align-items-center d-flex">
+        <img class="logo mx-3" src="/assets/images/logo.png" alt="logo" style="max-height: 45px;"> 
+        <a class="px-3 fs-5" 
             routerLinkActive="active"
             routerLink="/"
             [routerLinkActiveOptions]="{exact: true}"
             >Ana Sayfa
         </a>
-        <a class="p-2" routerLinkActive="active" routerLink="/shop">Öne Çıkanlar</a>
-        <a class="p-2" routerLinkActive="active" routerLink="/contact">İLETİŞİM</a>
+        <a class="px-3 fs-5" routerLinkActive="active" routerLink="/shop">Öne Çıkanlar</a>
+        <a class="px-3 fs-5" routerLinkActive="active" routerLink="/contact">İLETİŞİM</a>
     </nav>
 
     <div class="d-flex align-items-center">
-        <a class="position-relative" href="#">
-            <img class="me-5" src="https://img.icons8.com/?size=25&id=9671&format=png&color=000000" alt="shopping cart">
+        <button class="mx-2 btn btn-secondary">Giriş Yap</button>
+        <button class="mx-2 btn btn-outline-secondary ">Kayıt ol</button>
+        <a class="mx-3 position-relative" href="#">
+            <i class="fa fa-shopping-cart fa-2x me-5 "></i>
             <div class="cart-no">5</div>
         </a>
     </div>
