--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,6 +1,21 @@
-<div *ngIf="product"></div>
+<div class="row"*ngIf="product">
+    <div class="col-6">
+        <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="w-100">
+    </div>
 
-<h1>{{product?.name}}</h1>
-<h6>{{product?.description}}</h6>
-<img src="{{product?.pictureUrl}}" alt="">
-<h3>{{product?.price | currency: "₺"}}</h3>
+    <div class="col-6 mt-5">
+        <h2>{{product.name}}</h2>
+        <p>{{product.price | currency:"₺"}}</p>
+
+        <div class="d-flex justify-content-start align-items-center">
+            <i class="fa fa-minus-circle text-primary me-2" style="cursor: pointer; font-size: 2em;"></i>
+            <span class="font-weight-bold me-2" style="font-size: 1.5em;">2</span>
+            <i class="fa fa-plus-circle text-primary me-2" style="cursor: pointer; font-size: 2em;"></i>
+            <button class="btn btn-outline-primary ms-4 me-2">Sepete Ekle</button>
+        </div>
+        <div class="row mt-4">
+            <h4>Ürün Açıklaması</h4>
+            <p>{{product.description}}</p>
+        </div>
+    </div>
+</div>
