Added HttpInterceptor that catches errors and acts accordingly. Added an error component. Added handler components for 500, 400. Added toast notifications.

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
             >Ana Sayfa
         </a>
         <a class="px-3 fs-5" routerLinkActive="active" routerLink="/shop">Öne Çıkanlar</a>
-        <a class="px-3 fs-5" routerLinkActive="active" routerLink="/contact">İLETİŞİM</a>
+        <a class="px-3 fs-5" routerLinkActive="active" routerLink="/test-error">Hatalar</a>
     </nav>
 
     <div class="d-flex align-items-center">
