--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,21 +1,23 @@
-<div class="row"*ngIf="product">
-    <div class="col-6">
-        <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="w-100">
+<div class="row mt-4 p-4 rounded shadow-lg bg-light" *ngIf="product">
+    <div class="col-md-6">
+      <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid rounded shadow-sm">
     </div>
-
-    <div class="col-6 mt-5">
-        <h2>{{product.name}}</h2>
-        <p>{{product.price | currency:"₺"}}</p>
-
-        <div class="d-flex justify-content-start align-items-center">
-            <i class="fa fa-minus-circle text-primary me-2" style="cursor: pointer; font-size: 2em;"></i>
-            <span class="font-weight-bold me-2" style="font-size: 1.5em;">2</span>
-            <i class="fa fa-plus-circle text-primary me-2" style="cursor: pointer; font-size: 2em;"></i>
-            <button class="btn btn-outline-primary ms-4 me-2">Sepete Ekle</button>
-        </div>
-        <div class="row mt-4">
-            <h4>Ürün Açıklaması</h4>
-            <p>{{product.description}}</p>
-        </div>
+  
+    <div class="col-md-6 mt-5">
+      <h2 class="display-4 text-primary">{{product.name}}</h2>
+      <p class="lead text-success">{{product.price | currency:"₺"}}</p>
+  
+      <div class="d-flex align-items-center my-4">
+        <i class="fa fa-minus-circle text-primary me-3 icon-hover"></i>
+        <span class="fw-bold me-3 quantity-display">2</span>
+        <i class="fa fa-plus-circle text-primary me-3 icon-hover"></i>
+        <button class="btn btn-gradient ms-4">Sepete Ekle</button>
+      </div>
+  
+      <div class="mt-4">
+        <h4 class="h5 text-secondary">Ürün Açıklaması</h4>
+        <p class="text-muted">{{product.description}}</p>
+      </div>
     </div>
-</div>
+  </div>
+  
